--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
+    "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.9.0",
     "semantic-ui-css": "^2.5.0",
